--- a/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,7 +187,7 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab1.SelectedPaths=/Game/CombatSystem/CourseFiles/BP
+ContentBrowserTab1.SelectedPaths=/Game/Content
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -213,15 +213,7 @@ GlobalAssetPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/Actors/BP_BaseWeapon.BP_BaseWeapon
-OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/interfaces/AnimInterface_BPI.AnimInterface_BPI
-OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/interfaces/CombatBPI.CombatBPI
-OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/interfaces/interactable_BPI.interactable_BPI
-OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/interfaces/TargetingBPI.TargetingBPI
-OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/BP_CombatCharacter.BP_CombatCharacter
-OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/Components/BP_CombatComponent.BP_CombatComponent
-OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/Components/BP_CollisionComponent.BP_CollisionComponent
+CleanShutdown=True
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -1937,6 +1929,7 @@ PlayerStart.DataLayers=True
 /Game/CombatSystem/CourseFiles/BP/Enums/E_RotationMode.E_RotationMode=1
 /Game/CombatSystem/CourseFiles/BP/interfaces/TarrgetingBPI.TarrgetingBPI=1
 /Game/CombatSystem/CourseFiles/BP/UI/WB_LockOn.WB_LockOn=1
+/Game/CombatSystem/CourseFiles/BP/interfaces/TargetingBPI.TargetingBPI=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
@@ -2201,7 +2194,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/UnrealEngine5_ActionGame02/ActionGame02/Content/ThirdPerson/Maps
+UNR=../../../../../../UnrealEnginAction/ActionGame02/Content/ThirdPerson/Maps
 BRUSH=D:/UnrealEngine5_ActionGame02/ActionGame02/Content/
 FBX=D:/UnrealEngine5_ActionGame02/ActionGame02/Content/
 FBXAnim=D:/UnrealEngine5_ActionGame02/ActionGame02/Content/
@@ -3377,7 +3370,7 @@ K2Node_CustomEvent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 Perform Dodge=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.833985224F068C5E95E36E90645A7742,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,K2Node_VariableGet.DefaultValueCategory.L_ActionMontages,PropertyWrapper.DefaultValueCategory.Style,PropertyWrapper.DefaultValueCategory.ActionDamageMul,K2Node_FunctionResult.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionResult.Inputs.9C5ED3A14346ACB175E269B387200649,PropertyWrapper.DefaultValueCategory.ActionStatCost,PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_FunctionEntry.Inputs.A5006AE84E2631273F44E5B87C4F1356,K2Node_FunctionEntry.Inputs.CF19247E4C960873B0D252AF0AC6A241,K2Node_FunctionEntry.Inputs.6DA9C8454ADF6B6DBD70578F9FA78B7E,K2Node_FunctionEntry.Inputs.0D25806341A6A6702875A8B97FCEC814,K2Node_FunctionEntry.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionEntry.Inputs.06EF5A7A4AA2D0931ED299A6B46BF918,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,K2Node_VariableGet.DefaultValueCategory.ActionDamageMul,
 Perform Dodge_10=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.833985224F068C5E95E36E90645A7742,
 RotateCharacter_ANS_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.833985224F068C5E95E36E90645A7742,
-BP_CollisionComponent_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.833985224F068C5E95E36E90645A7742,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,K2Node_VariableGet.DefaultValueCategory.L_ActionMontages,PropertyWrapper.DefaultValueCategory.Style,PropertyWrapper.DefaultValueCategory.ActionDamageMul,K2Node_FunctionResult.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionResult.Inputs.9C5ED3A14346ACB175E269B387200649,PropertyWrapper.DefaultValueCategory.ActionStatCost,PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_FunctionEntry.Inputs.A5006AE84E2631273F44E5B87C4F1356,K2Node_FunctionEntry.Inputs.CF19247E4C960873B0D252AF0AC6A241,K2Node_FunctionEntry.Inputs.6DA9C8454ADF6B6DBD70578F9FA78B7E,K2Node_FunctionEntry.Inputs.0D25806341A6A6702875A8B97FCEC814,K2Node_FunctionEntry.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionEntry.Inputs.06EF5A7A4AA2D0931ED299A6B46BF918,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,K2Node_VariableGet.DefaultValueCategory.ActionDamageMul,K2Node_VariableGet.DefaultValueCategory.Object Types,
+BP_CollisionComponent_C=
 MulticastInlineDelegatePropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.833985224F068C5E95E36E90645A7742,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,K2Node_VariableGet.DefaultValueCategory.L_ActionMontages,PropertyWrapper.DefaultValueCategory.Style,PropertyWrapper.DefaultValueCategory.ActionDamageMul,K2Node_FunctionResult.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionResult.Inputs.9C5ED3A14346ACB175E269B387200649,PropertyWrapper.DefaultValueCategory.ActionStatCost,PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_FunctionEntry.Inputs.A5006AE84E2631273F44E5B87C4F1356,K2Node_FunctionEntry.Inputs.CF19247E4C960873B0D252AF0AC6A241,K2Node_FunctionEntry.Inputs.6DA9C8454ADF6B6DBD70578F9FA78B7E,K2Node_FunctionEntry.Inputs.0D25806341A6A6702875A8B97FCEC814,K2Node_FunctionEntry.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionEntry.Inputs.06EF5A7A4AA2D0931ED299A6B46BF918,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,
 CapsuleComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.833985224F068C5E95E36E90645A7742,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,K2Node_VariableGet.DefaultValueCategory.L_ActionMontages,PropertyWrapper.DefaultValueCategory.Style,PropertyWrapper.DefaultValueCategory.ActionDamageMul,K2Node_FunctionResult.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionResult.Inputs.9C5ED3A14346ACB175E269B387200649,PropertyWrapper.DefaultValueCategory.ActionStatCost,PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_FunctionEntry.Inputs.A5006AE84E2631273F44E5B87C4F1356,K2Node_FunctionEntry.Inputs.CF19247E4C960873B0D252AF0AC6A241,K2Node_FunctionEntry.Inputs.6DA9C8454ADF6B6DBD70578F9FA78B7E,K2Node_FunctionEntry.Inputs.0D25806341A6A6702875A8B97FCEC814,K2Node_FunctionEntry.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionEntry.Inputs.06EF5A7A4AA2D0931ED299A6B46BF918,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,K2Node_VariableGet.DefaultValueCategory.ActionDamageMul,K2Node_VariableGet.DefaultValueCategory.Object Types,
 StaticMeshActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.833985224F068C5E95E36E90645A7742,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,K2Node_VariableGet.DefaultValueCategory.L_ActionMontages,PropertyWrapper.DefaultValueCategory.Style,PropertyWrapper.DefaultValueCategory.ActionDamageMul,K2Node_FunctionResult.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionResult.Inputs.9C5ED3A14346ACB175E269B387200649,PropertyWrapper.DefaultValueCategory.ActionStatCost,PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_FunctionEntry.Inputs.A5006AE84E2631273F44E5B87C4F1356,K2Node_FunctionEntry.Inputs.CF19247E4C960873B0D252AF0AC6A241,K2Node_FunctionEntry.Inputs.6DA9C8454ADF6B6DBD70578F9FA78B7E,K2Node_FunctionEntry.Inputs.0D25806341A6A6702875A8B97FCEC814,K2Node_FunctionEntry.Inputs.A365A1C547B0255EAADE5CAA22375CE2,K2Node_FunctionEntry.Inputs.06EF5A7A4AA2D0931ED299A6B46BF918,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,K2Node_VariableGet.DefaultValueCategory.ActionDamageMul,K2Node_VariableGet.DefaultValueCategory.Object Types,
