--- a/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2178,7 +2178,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 [RootWindow]
 ScreenPosition=X=308.000 Y=87.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
