敵の体力を追加、ロックオンしたときに体力が可視されるように調整

--- a/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -13,7 +13,7 @@ Combat StateCharacter.Action.Dodge.Expanded=True
 Combat StateCharacter.Action.Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Expanded=True
-SGameplayTagGraphPinCharacter.Action.Attack.Expanded=False
+SGameplayTagGraphPinCharacter.Action.Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Sprint Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Charged Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Exit Combat.Expanded=True
@@ -63,9 +63,9 @@ SGameplayTagContainerGraphPinCharacter.State.Attacking.Expanded=True
 キー (Gameplay Tag)Character.Action.Expanded=True
 キー (Gameplay Tag)Character.Action.Attack.Expanded=True
 Weapon.Expanded=True
-SGameplayTagGraphPinWeapon.Expanded=True
-SGameplayTagGraphPinWeapon.State.Expanded=True
-SGameplayTagGraphPinWeapon.State.Equipped.Expanded=True
+SGameplayTagGraphPinWeapon.Expanded=False
+SGameplayTagGraphPinWeapon.State.Expanded=False
+SGameplayTagGraphPinWeapon.State.Equipped.Expanded=False
 0Weapon.Expanded=True
 0Weapon.State.Expanded=True
 1Weapon.Expanded=True
@@ -79,4 +79,21 @@ TagsCharacter.Expanded=True
 TagsCharacter.Action.Expanded=True
 TagsCharacter.Action.Attack.Expanded=True
 TagsCharacter.Action.Attack.Light Attack.Expanded=True
+0Character.Action.Attack.Falling Attack.Expanded=True
+0Character.Action.Attack.Charged Attack.Expanded=True
+0Character.Action.Attack.Close Range.Expanded=True
+0Character.Action.Attack.Heavy Attack.Expanded=True
+0Character.Action.Attack.Light Attack.Expanded=True
+0Character.Action.Attack.Sprint Attack.Expanded=True
+0Character.Action.Dodge.Expanded=True
+0Character.Action.Enter Combat.Expanded=True
+0Character.Action.Exit Combat.Expanded=True
+0Character.Action.General Action.Expanded=True
+0Character.State.Attacking.Expanded=True
+0Character.State.Dead.Expanded=True
+0Character.State.Disabled.Expanded=True
+0Character.State.Dodging.Expanded=True
+0Character.State.General Action State.Expanded=True
+SGameplayTagGraphPinCharacter.Action.Attack.Close Range.Expanded=True
+SGameplayTagGraphPinCharacter.Action.Exit Combat.Expanded=True
 
