ターゲットシステムの構築、追撃、追跡圏外を設計

--- a/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -96,4 +96,45 @@ TagsCharacter.Action.Attack.Light Attack.Expanded=True
 0Character.State.General Action State.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Close Range.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Exit Combat.Expanded=True
+Owned Game Play TagsCharacter.Expanded=True
+Owned Game Play TagsCharacter.Action.Expanded=True
+Owned Game Play TagsCharacter.Action.Attack.Expanded=True
+Owned Game Play TagsCharacter.Action.Attack.Charged Attack.Expanded=True
+Owned Game Play TagsCharacter.Action.Attack.Close Range.Expanded=True
+Owned Game Play TagsCharacter.Action.Attack.Falling Attack.Expanded=True
+Owned Game Play TagsCharacter.Action.Attack.Heavy Attack.Expanded=True
+Owned Game Play TagsCharacter.Action.Attack.Light Attack.Expanded=True
+Owned Game Play TagsCharacter.Action.Attack.Sprint Attack.Expanded=True
+Owned Game Play TagsCharacter.Action.Dodge.Expanded=True
+Owned Game Play TagsCharacter.Action.Enter Combat.Expanded=True
+Owned Game Play TagsCharacter.Action.Exit Combat.Expanded=True
+Owned Game Play TagsCharacter.Action.General Action.Expanded=True
+Owned Game Play TagsCharacter.Player.Expanded=True
+Owned Game Play TagsCharacter.State.Expanded=True
+Owned Game Play TagsCharacter.State.Attacking.Expanded=True
+Owned Game Play TagsCharacter.State.Dead.Expanded=True
+Owned Game Play TagsCharacter.State.Disabled.Expanded=True
+Owned Game Play TagsCharacter.State.Dodging.Expanded=True
+Owned Game Play TagsCharacter.State.General Action State.Expanded=True
+Attack Type TagCharacter.Expanded=True
+Attack Type TagCharacter.Action.Expanded=True
+Attack Type TagCharacter.Action.Attack.Expanded=True
+Attack Type TagCharacter.Action.Attack.Charged Attack.Expanded=True
+Attack Type TagCharacter.Action.Attack.Close Range.Expanded=True
+Attack Type TagCharacter.Action.Attack.CloseRange.Expanded=True
+Attack Type TagCharacter.Action.Attack.Falling Attack.Expanded=True
+Attack Type TagCharacter.Action.Attack.Heavy Attack.Expanded=True
+Attack Type TagCharacter.Action.Attack.Light Attack.Expanded=True
+Attack Type TagCharacter.Action.Attack.Sprint Attack.Expanded=True
+Attack Type TagCharacter.Action.Dodge.Expanded=True
+Attack Type TagCharacter.Action.Enter Combat.Expanded=True
+Attack Type TagCharacter.Action.Exit Combat.Expanded=True
+Attack Type TagCharacter.Action.General Action.Expanded=True
+Attack Type TagCharacter.Player.Expanded=True
+Attack Type TagCharacter.State.Expanded=True
+Attack Type TagCharacter.State.Attacking.Expanded=True
+Attack Type TagCharacter.State.Dead.Expanded=True
+Attack Type TagCharacter.State.Disabled.Expanded=True
+Attack Type TagCharacter.State.Dodging.Expanded=True
+Attack Type TagCharacter.State.General Action State.Expanded=True
 
