ちゃんとAIと戦えるようになった

--- a/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -141,4 +141,56 @@ Weapon.State.Expanded=True
 SGameplayTagGraphPinCharacter.Player.Expanded=True
 SGameplayTagGraphPinWeapon.State.SimulatingPhysics.Expanded=False
 SGameplayTagGraphPinWeapon.State.UnEquipped.Expanded=False
+Action TagCharacter.Expanded=True
+Action TagCharacter.Action.Expanded=True
+Action TagCharacter.Action.Attack.Expanded=True
+Action TagCharacter.Action.Attack.Charged Attack.Expanded=True
+Action TagCharacter.Action.Attack.Close Range.Expanded=True
+Action TagCharacter.Action.Attack.CloseRange.Expanded=True
+Action TagCharacter.Action.Attack.Falling Attack.Expanded=True
+Action TagCharacter.Action.Attack.Heavy Attack.Expanded=True
+Action TagCharacter.Action.Attack.Light Attack.Expanded=True
+Action TagCharacter.Action.Attack.Sprint Attack.Expanded=True
+Action TagCharacter.Action.Dodge.Expanded=True
+Action TagCharacter.Action.Enter Combat.Expanded=True
+Action TagCharacter.Action.Exit Combat.Expanded=True
+Action TagCharacter.Action.General Action.Expanded=True
+Action TagCharacter.Player.Expanded=True
+Action TagCharacter.State.Expanded=True
+Action TagCharacter.State.Attacking.Expanded=True
+Action TagCharacter.State.Dead.Expanded=True
+Action TagCharacter.State.Disabled.Expanded=True
+Action TagCharacter.State.Dodging.Expanded=True
+Action TagCharacter.State.General Action State.Expanded=True
+Action TagWeapon.Expanded=False
+Action TagWeapon.State.Expanded=False
+Action TagWeapon.State.Equipped.Expanded=False
+Action TagWeapon.State.SimulatingPhysics.Expanded=False
+Action TagWeapon.State.UnEquipped.Expanded=False
+State TagCharacter.Expanded=True
+State TagCharacter.Action.Expanded=True
+State TagCharacter.Action.Attack.Expanded=True
+State TagCharacter.Action.Attack.Charged Attack.Expanded=True
+State TagCharacter.Action.Attack.Close Range.Expanded=True
+State TagCharacter.Action.Attack.CloseRange.Expanded=True
+State TagCharacter.Action.Attack.Falling Attack.Expanded=True
+State TagCharacter.Action.Attack.Heavy Attack.Expanded=True
+State TagCharacter.Action.Attack.Light Attack.Expanded=True
+State TagCharacter.Action.Attack.Sprint Attack.Expanded=True
+State TagCharacter.Action.Dodge.Expanded=True
+State TagCharacter.Action.Enter Combat.Expanded=True
+State TagCharacter.Action.Exit Combat.Expanded=True
+State TagCharacter.Action.General Action.Expanded=True
+State TagCharacter.Player.Expanded=True
+State TagCharacter.State.Expanded=True
+State TagCharacter.State.Attacking.Expanded=True
+State TagCharacter.State.Dead.Expanded=True
+State TagCharacter.State.Disabled.Expanded=True
+State TagCharacter.State.Dodging.Expanded=True
+State TagCharacter.State.General Action State.Expanded=True
+State TagWeapon.Expanded=False
+State TagWeapon.State.Expanded=False
+State TagWeapon.State.Equipped.Expanded=False
+State TagWeapon.State.SimulatingPhysics.Expanded=False
+State TagWeapon.State.UnEquipped.Expanded=False
 
