--- a/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -13,7 +13,7 @@ Combat StateCharacter.Action.Dodge.Expanded=True
 Combat StateCharacter.Action.Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Expanded=True
-SGameplayTagGraphPinCharacter.Action.Attack.Expanded=True
+SGameplayTagGraphPinCharacter.Action.Attack.Expanded=False
 SGameplayTagGraphPinCharacter.Action.Attack.Sprint Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Charged Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Exit Combat.Expanded=True
@@ -96,8 +96,8 @@ TagsCharacter.Action.Attack.Light Attack.Expanded=True
 0Character.State.General Action State.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Close Range.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Exit Combat.Expanded=True
-Owned Game Play TagsCharacter.Expanded=True
-Owned Game Play TagsCharacter.Action.Expanded=True
+Owned Game Play TagsCharacter.Expanded=False
+Owned Game Play TagsCharacter.Action.Expanded=False
 Owned Game Play TagsCharacter.Action.Attack.Expanded=True
 Owned Game Play TagsCharacter.Action.Attack.Charged Attack.Expanded=True
 Owned Game Play TagsCharacter.Action.Attack.Close Range.Expanded=True
@@ -255,4 +255,20 @@ Action TagCharacter.Action.Attack.Medium Range.Expanded=True
 Action TagCharacter.Action.Attack.RareAttack.Expanded=True
 Action TagCharacter.Action.Intro.Expanded=True
 Action TagCharacter.Enemy.Expanded=True
+SGameplayTagGraphPinCharacter.Action.Intro.Expanded=True
+SGameplayTagGraphPinCharacter.Action.Use Item.Expanded=True
+SGameplayTagGraphPinCharacter.Enemy.Expanded=True
+Owned Game Play TagsCharacter.Action.Intro.Expanded=True
+Owned Game Play TagsCharacter.Action.Use Item.Expanded=False
+Owned Game Play TagsWeapon.Expanded=False
+Owned Game Play TagsWeapon.State.Expanded=False
+Owned Game Play TagsWeapon.State.Equipped.Expanded=False
+Owned Game Play TagsWeapon.State.SimulatingPhysics.Expanded=False
+Owned Game Play TagsWeapon.State.UnEquipped.Expanded=False
+Owned Game Play TagsItem.Expanded=True
+Owned Game Play TagsItem.Consumable.Expanded=True
+Owned Game Play TagsItem.Consumable.Potion.Expanded=True
+SGameplayTagGraphPinItem.Expanded=True
+Item Tag To ConsumeItem.Expanded=True
+Item Tag To ConsumeItem.Consumable.Expanded=True
 
