防具の装備、回復薬の数がしっかり表示されるように修正。ロックオンしたときに、正常に動いてくれないバグが発生。回復薬が使えない、防御ができないバグも発生。 次は上記のバグ修正からスタートする。

--- a/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -63,8 +63,8 @@ SGameplayTagContainerGraphPinCharacter.State.Attacking.Expanded=True
 キー (Gameplay Tag)Character.Action.Expanded=True
 キー (Gameplay Tag)Character.Action.Attack.Expanded=True
 Weapon.Expanded=True
-SGameplayTagGraphPinWeapon.Expanded=False
-SGameplayTagGraphPinWeapon.State.Expanded=False
+SGameplayTagGraphPinWeapon.Expanded=True
+SGameplayTagGraphPinWeapon.State.Expanded=True
 SGameplayTagGraphPinWeapon.State.Equipped.Expanded=False
 0Weapon.Expanded=True
 0Weapon.State.Expanded=True
@@ -273,4 +273,5 @@ Item Tag To ConsumeItem.Expanded=True
 Item Tag To ConsumeItem.Consumable.Expanded=True
 SGameplayTagGraphPinItem.Consumable.Expanded=True
 SGameplayTagGraphPinItem.Consumable.Potion.Expanded=True
+Current StateCharacter.Action.Exit Combat.Expanded=True
 
