完成（ベータ版）！！スカウト展までにスタート画面や、フィールドのBGM、環境音などを追加する。

--- a/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -303,4 +303,5 @@ SGameplayTagGraphPinCharacter.State.Block Reaction.Expanded=True
 8Character.State.Disabled.Expanded=True
 8Character.State.Dodging.Expanded=True
 8Character.State.General Action State.Expanded=True
+Item Tag to ConsumeItem.Consumable.Potion.Expanded=True
 
