--- a/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -217,7 +217,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=False
 
 [DetailCategories]
@@ -5652,6 +5652,12 @@ DistCurveEditor.TimeStamp=2023.04.27-16.33.44
 DistCurveEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2023.04.27-16.33.55
 TextureEditor.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2023.04.27-16.33.49
+LauncherServices.LastCompileMethod=Unknown
+TurnkeyIO.TimeStamp=2023.04.27-16.33.56
+TurnkeyIO.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2023.04.27-16.33.56
+UATHelper.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
