--- a/ActionGame02/Saved/Config/WindowsEditor/Game.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/Game.ini
@@ -8,7 +8,7 @@ PerPlatformBuildTarget=()
 Build=IfProjectHasCode
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/UnrealEnginAction/ActionGame02/PackageData")
+StagingDirectory=(Path="C:/Soul\'sLike_UnrealEngine")
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
