ボス線専用のSceneを作成、死亡演出の追加、ボタン押したときの効果音作成、ＷＢＰの作成

--- a/ActionGame02/Config/DefaultEngine.ini
+++ b/ActionGame02/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ActionGame02
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Title/Title.Title
-GameDefaultMap=/Game/Title/Title.Title
+EditorStartupMap=/Game/ThirdPerson/Maps/BossBattleMap.BossBattleMap
+GameDefaultMap=/Game/ThirdPerson/Maps/BossBattleMap.BossBattleMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
