--- a/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -13,7 +13,7 @@ Combat StateCharacter.Action.Dodge.Expanded=True
 Combat StateCharacter.Action.Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Expanded=True
-SGameplayTagGraphPinCharacter.Action.Attack.Expanded=False
+SGameplayTagGraphPinCharacter.Action.Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Sprint Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Charged Attack.Expanded=True
 SGameplayTagGraphPinCharacter.Action.Attack.Exit Combat.Expanded=True
