--- a/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -1,10 +1,10 @@
 [GameplayTagWidget]
-Character.Expanded=True
-Character.State.Expanded=True
+Character.Expanded=False
+Character.State.Expanded=False
 ________________A____k___.Expanded=True
 __________A_____.Expanded=True
-Character.Action.Expanded=True
-Character.Action.Attack.Expanded=True
+Character.Action.Expanded=False
+Character.Action.Attack.Expanded=False
 Combat StateCharacter.Expanded=True
 Combat StateCharacter.State.Expanded=True
 Combat StateCharacter.State.Dead.Expanded=True
@@ -62,7 +62,7 @@ SGameplayTagContainerGraphPinCharacter.State.Attacking.Expanded=True
 キー (Gameplay Tag)Character.Expanded=True
 キー (Gameplay Tag)Character.Action.Expanded=True
 キー (Gameplay Tag)Character.Action.Attack.Expanded=True
-Weapon.Expanded=True
+Weapon.Expanded=False
 SGameplayTagGraphPinWeapon.Expanded=False
 SGameplayTagGraphPinWeapon.State.Expanded=True
 SGameplayTagGraphPinWeapon.State.Equipped.Expanded=False
@@ -137,7 +137,7 @@ Attack Type TagCharacter.State.Dead.Expanded=True
 Attack Type TagCharacter.State.Disabled.Expanded=True
 Attack Type TagCharacter.State.Dodging.Expanded=True
 Attack Type TagCharacter.State.General Action State.Expanded=True
-Weapon.State.Expanded=True
+Weapon.State.Expanded=False
 SGameplayTagGraphPinCharacter.Player.Expanded=True
 SGameplayTagGraphPinWeapon.State.SimulatingPhysics.Expanded=False
 SGameplayTagGraphPinWeapon.State.UnEquipped.Expanded=False
