--- a/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -226,8 +226,8 @@ BP_EquipmentComponent_C=PropertyWrapper.DefaultValueCategory.StartingEquipment,K
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,CameraActor.PostProcess.Global Illumination,CameraActor.PostProcess.Lens,CameraActor.PostProcess.Color Grading,
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,
 BP_CombatCharacter_C=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,CameraActor.PostProcess.Global Illumination,CameraActor.PostProcess.Lens,CameraActor.PostProcess.Color Grading,
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,CameraActor.PostProcess.Global Illumination,CameraActor.PostProcess.Lens,CameraActor.PostProcess.Color Grading,
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,CameraActor.PostProcess.Global Illumination,CameraActor.PostProcess.Lens,CameraActor.PostProcess.Color Grading,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,
+SkeletalMeshComponent=
+CapsuleComponent=
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,CameraActor.PostProcess.Global Illumination,CameraActor.PostProcess.Lens,CameraActor.PostProcess.Color Grading,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
@@ -388,7 +388,7 @@ BP_AddHealPoint_C=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 PostProcessVolume=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,
 Landscape=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,CameraActor.PostProcess.Global Illumination,CameraActor.PostProcess.Lens,CameraActor.PostProcess.Color Grading,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,
-WidgetComponent=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,
+WidgetComponent=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,CameraActor.PostProcess.Global Illumination,CameraActor.PostProcess.Lens,CameraActor.PostProcess.Color Grading,
 MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,
 SetState=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_VariableGet.DefaultValueCategory.Equipped Items,K2Node_VariableGet.DefaultValueCategory.StartingEquipment,EdGraph.Inputs.33AD3C2142823E0B88DEAB8AEEFA3B40,K2Node_VariableGet.DefaultValueCategory.ActionStatCost,BP_FrostGiantBoss_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.Collision Object Types,
@@ -444,7 +444,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/InfinityBladeEffects/Effects
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Sound
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -672,7 +672,7 @@ MovementComponent="\"Object\" "
 BP_CombatComponent_C="\"Object\" "
 BP_TargetingComponents_C="\"Object\" "
 BP_StateMagnagerComponent_C="\"Object\" "
-BP_StatsComponents_C="\"Object\" \"Object.Base Stats.Base Stats\" "
+BP_StatsComponents_C="\"Object\" \"Object.Base Stats.Base Stats\" \"Object.Base Stats.Base Stats.Base Stats_Value[0]\" "
 AttachWeaponActor_AN_C="\"Object\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
@@ -682,7 +682,7 @@ BP_CombatCharacter_C="\"Object\" "
 Character="\"Object\" \"Object.Patrol.TargetPoints\" "
 Pawn="\"Object\" \"Object.Patrol.TargetPoints\" "
 EdGraphNode_Comment="\"Object\" "
-StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshComponent="\"Object\" "
 SphereComponent="\"Object\" "
 SkyAtmosphereComponent="\"Object\" "
 SkyLightComponent="\"Object\" "
@@ -890,6 +890,9 @@ DefaultCameraShakeBase="\"Object\" \"Object.CameraShakePattern.RootShakePattern\
 BP_SmallCameraShakeBase_C="\"Object\" \"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" "
 AN_HitStop_C="\"Object\" "
 ANS_C="\"Object\" "
+FileMediaSource="\"Object\" "
+BaseMediaSource="\"Object\" "
+MediaSource="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -1078,7 +1081,7 @@ AnimSequence.Animation Model=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
 EditorNotifyObject.AnimNotify=True
-EditorNotifyObject.Trigger Settings=False
+EditorNotifyObject.Trigger Settings=True
 EditorNotifyObject.Category=True
 EditorNotifyObject.AnimLink=True
 BP_CombatCharacter_C.Networking=True
@@ -1868,6 +1871,7 @@ BP_FrostGiantBoss_C.Physics=True
 BP_FrostGiantBoss_C.Patrol=True
 BP_FrostGiantBoss_C.Collision=True
 BP_FrostGiantBoss_C.Lighting=True
+BP_FrostGiantBoss_C.モンタージュ=True
 BP_FrostGiantBoss_C.モンタージュ=True
 BP_FrostGiantBoss_C.モンタージュ=True
 BP_FrostGiantBoss_C.モンタージュ=True
@@ -3349,37 +3353,42 @@ K2Node_Tunnel.Inputs=True
 K2Node_Tunnel.Outputs=True
 AN_HitStop_C.AnimNotify=True
 ANS_C.AnimNotify=True
+BP_0MasterAI_C.モンタージュ =True
 BP_FrostGiantBoss_C.モンタージュ =True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/AI/BP_0MasterAI.BP_0MasterAI
 OpenAssetsAtExit=/Game/CombatSystem/CourseFiles/BP/AI/FrostGiantBoss/BP_FrostGiantBoss.BP_FrostGiantBoss
 OpenAssetsAtExit=/Game/InfinityBladeAdversaries/Enemy/Enemy_Frost_Giant/SK_Enemy_FrostGiant_Captain.SK_Enemy_FrostGiant_Captain
+OpenAssetsAtExit=/Game/InfinityBladeAdversaries/Enemy/Enemy_Frost_Giant/FrostGiant_ABP.FrostGiant_ABP
 OpenAssetsAtExit=/Game/InfinityBladeAdversaries/Enemy/Enemy_Frost_Giant/Enemy_Frost_Giant_All_Animation/Attacks/ExoGame_FrostGiant_Attck_Melee_Combo_Montage.ExoGame_FrostGiant_Attck_Melee_Combo_Montage
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InfinityBladeEffects/Effects/FX_Combat_Base/WeaponShimmer/ICE/P_WeaponShimmer_Ice_Blunt
-MRUItem1=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_ProjectileLob_Ice
-MRUItem2=/Game/InfinityBladeEffects/Effects/FX_Mobile/combat/P_Impact_Enemy_Gib_ICE
-MRUItem3=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_Break_IceWall
-MRUItem4=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_FrostGiant_Swing_Impact
-MRUItem5=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_Elemental/ICE/P_Elemental_Leap_Impact_Ice
-MRUItem6=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_Elemental/ICE/P_Elemental_Proj_Impact_Ice
-MRUItem7=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_Intro_Hand_Ice_Trail_01
-MRUItem8=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_JumpAndDive_Dash
-MRUItem9=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_JumpAndDive_Ice_00
-MRUItem10=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_JumpAndDive_Ice_02
-MRUItem11=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_ProjectileLob_Explo_Ice
-MRUItem12=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_Shout_Charge_Ice_02
-MRUItem13=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_Shout_Charge_Ice_01
-MRUItem14=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_SpearBlast_Pulse
-MRUItem15=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_TrapMagic_Ice_02
-MRUItem16=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_TrapMagic_Ice_00
-MRUItem17=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_Trap_Charge_Ice_01
-MRUItem18=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_TraceMagic_Ice_Shard_01
-MRUItem19=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_TraceMagic_Ice_Hammer_00
+MRUItem0=/Game/ThirdPerson/Sound/クリーチャー_ステレオ3
+MRUItem1=/Game/InfinityBladeAdversaries/Enemy/Enemy_Frost_Giant/Enemy_Frost_Giant_All_Animation/Attacks/ExoGame_FrostGiant_Attck_Melee_A_Montage
+MRUItem2=/Game/InfinityBladeAdversaries/Enemy/Enemy_Frost_Giant/FrostGiant_ABP
+MRUItem3=/Game/InfinityBladeAdversaries/Enemy/Enemy_Frost_Giant/SK_Enemy_FrostGiant_Captain
+MRUItem4=/Game/CombatSystem/CourseFiles/BP/AI/FrostGiantBoss/BP_FrostGiantBoss
+MRUItem5=/Game/CombatSystem/CourseFiles/BP/AI/BP_0MasterAI
+MRUItem6=/Game/InfinityBladeEffects/Effects/FX_Combat_Base/WeaponShimmer/ICE/P_WeaponShimmer_Ice_Blunt
+MRUItem7=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_ProjectileLob_Ice
+MRUItem8=/Game/InfinityBladeEffects/Effects/FX_Mobile/combat/P_Impact_Enemy_Gib_ICE
+MRUItem9=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_Break_IceWall
+MRUItem10=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_FrostGiant_Swing_Impact
+MRUItem11=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_Elemental/ICE/P_Elemental_Leap_Impact_Ice
+MRUItem12=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_Elemental/ICE/P_Elemental_Proj_Impact_Ice
+MRUItem13=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_Intro_Hand_Ice_Trail_01
+MRUItem14=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_JumpAndDive_Dash
+MRUItem15=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_JumpAndDive_Ice_00
+MRUItem16=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_JumpAndDive_Ice_02
+MRUItem17=/Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_FrostGiant/ICE/P_ProjectileLob_Explo_Ice
+MRUItem18=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_Shout_Charge_Ice_02
+MRUItem19=/Game/InfinityBladeEffects/Effects/FX_Mobile/ICE/combat/P_Shout_Charge_Ice_01
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
@@ -3740,14 +3749,14 @@ CameraActor.Actor=True
 GameMapsSettings.DefaultModes=True
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=31.200
+ScreenPosition=X=0.000 Y=31.000
 WindowSize=X=1531.200 Y=823.200
-WindowSize=X=1531.200 Y=831.200
+WindowSize=X=1532.000 Y=832.000
 None=======
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../../../UnrealEngineProject/ActionGame02/Content/ThirdPerson/Maps
+UNR=D:/ActionGame/ActionGame02/Content/ThirdPerson/Maps
 BRUSH=../../../../../../UnrealEngine_Sole'sLike/ActionGame02/Content/
 FBX=../../../../../../UnrealEngine_Sole'sLike/ActionGame02/Content/
 FBXAnim=../../../../../../UnrealEngine_Sole'sLike/ActionGame02/Content/
