--- a/ActionGame02/Config/DefaultInput.ini
+++ b/ActionGame02/Config/DefaultInput.ini
@@ -98,6 +98,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Right)
++AxisMappings=(AxisName="DontShowMouse",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="DontShowMouse",Scale=1.000000,Key=Gamepad_LeftX)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
