--- a/ActionGame02/Config/DefaultEngine.ini
+++ b/ActionGame02/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ActionGame02
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/BossBattleMap.BossBattleMap
-GameDefaultMap=/Game/ThirdPerson/Maps/BossBattleMap.BossBattleMap
+EditorStartupMap=/Game/ThirdPerson/Maps/MainMap/TitleMap.TitleMap
+GameDefaultMap=/Game/ThirdPerson/Maps/MainMap/TitleMap.TitleMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
