--- a/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -443,7 +443,7 @@ SoundManager_C=PropertyWrapper.DefaultValueCategory.StartingEquipment,K2Node_Var
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game
-ContentBrowserTab1.SelectedPaths=/Game/Megascans/3D_Assets/Ice_Cliff_vd4hbizcb
+ContentBrowserTab1.SelectedPaths=/Game/Megascans/3D_Assets/Ice_Cliff_vdfjegtdb
 None=======
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -457,7 +457,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.SelectedPaths=/Game/CombatSystem
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3016,6 +3016,7 @@ WB_BossHealth_C.Clipping=True
 WB_BossHealth_C.Navigation=True
 K2Node_SetFieldsInStruct.PinOptions=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 SoundNodeRandom.Random=True
 MetasoundInterfacesView.Interfaces=True
 MetasoundEditorGraphInput.General=True
@@ -3624,7 +3625,6 @@ BP_TitleController_C.Actor=True
 BP_TitleController_C.HLOD=True
 BP_TitleController_C.Physics=True
 BP_TitleController_C.Events=True
-Texture2D.Interchange =True
 RichTextBlock.Layout=True
 RichTextBlock.Content=True
 RichTextBlock.Appearance=True
@@ -3667,16 +3667,16 @@ CleanShutdown=True
 None=======
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Title_UI
-MRUItem1=/Game/UI/Material
-MRUItem2=/Game/UI/nc216602
-MRUItem3=/Game/UI/WBP_Title
-MRUItem4=/Game/CombatSystem/CourseFiles/BP/BP_TitleController
-MRUItem5=/Game/CombatSystem/CourseFiles/BP/UI/WB_MainHUD
-MRUItem6=/Game/CombatSystem/CourseFiles/BP/BP_CombatPlayerController
-MRUItem7=/Game/CombatSystem/CourseFiles/BP/BP_TitleGameMode
-MRUItem8=/Game/ThirdPerson/Maps/MainMap/TitleMap
-MRUItem9=/Game/ThirdPerson/Maps/MainMap/BossBattleMap
+MRUItem0=/Game/ThirdPerson/Maps/MainMap/TitleMap
+MRUItem1=/Game/ThirdPerson/Maps/MainMap/BossBattleMap
+MRUItem2=/Game/UI/Title_UI
+MRUItem3=/Game/UI/Material
+MRUItem4=/Game/UI/nc216602
+MRUItem5=/Game/UI/WBP_Title
+MRUItem6=/Game/CombatSystem/CourseFiles/BP/BP_TitleController
+MRUItem7=/Game/CombatSystem/CourseFiles/BP/UI/WB_MainHUD
+MRUItem8=/Game/CombatSystem/CourseFiles/BP/BP_CombatPlayerController
+MRUItem9=/Game/CombatSystem/CourseFiles/BP/BP_TitleGameMode
 MRUItem10=/Game/SoulCave/Blueprints/MyGame
 MRUItem11=/Game/SoulCave/Blueprints/MyController
 MRUItem12=/Game/ThirdPerson/Maps/MianMap/TitleMap
@@ -4000,7 +4000,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 [DetailMultiObjectNodeExpansion]
 GameplayTagsSettings=True
 GeneralProjectSettings=True
-GameMapsSettings=False
+GameMapsSettings=True
 InputSettings=True
 AudioEditorSettings=True
 LevelEditorViewportSettings=True
@@ -4113,7 +4113,7 @@ Texture2D.LevelOfDetail=True
 [RootWindow]
 ScreenPosition=X=555.200 Y=19.200
 WindowSize=X=1531.200 Y=823.200
-WindowSize=X=977.600 Y=841.600
+WindowSize=X=979.200 Y=843.200
 None=======
 InitiallyMaximized=True
 
