--- a/ActionGame02/Config/DefaultEngine.ini
+++ b/ActionGame02/Config/DefaultEngine.ini
@@ -2,12 +2,17 @@
 GameName=ActionGame02
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/MainMap/TitleMap.TitleMap
-GameDefaultMap=/Game/ThirdPerson/Maps/MainMap/TitleMap.TitleMap
-TransitionMap=
+EditorStartupMap=/Game/ThirdPerson/Maps/MainMap/MainTitleMap.MainTitleMap
+LocalMapOptions=
+TransitionMap=/Game/ThirdPerson/Maps/MainMap/BossBattleMap.BossBattleMap
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/ThirdPerson/Maps/MainMap/MainTitleMap.MainTitleMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/ThirdPerson/Maps/GMB_TitleMapGameMode.GMB_TitleMapGameMode_C
 GlobalDefaultServerGameMode=None
 
