--- a/ActionGame02/Saved/Config/WindowsEditor/Game.ini
+++ b/ActionGame02/Saved/Config/WindowsEditor/Game.ini
@@ -2,33 +2,5 @@
 bAddPacks=False
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
-PerPlatformBuildTarget=()
-Build=IfProjectHasCode
-BuildTarget=
-LaunchOnTarget=
-StagingDirectory=(Path="C:/Soul\'sLike_UnrealEngine")
-ForDistribution=False
-IncludeDebugFiles=False
-BlueprintNativizationMethod=Disabled
-bIncludeNativizedAssetsInProjectGeneration=False
-bExcludeMonolithicEngineHeadersInNativizedCode=False
-bUseZenStore=False
-bMakeBinaryConfig=False
-bGenerateNoChunks=False
-bForceOneChunkPerFile=False
-MaxChunkSize=0
-bBuildHttpChunkInstallData=False
-HttpChunkInstallDataDirectory=(Path="")
-PackageAdditionalCompressionOptions=
-bPackageCompressionEnableDDC=False
-PackageCompressionMinSizeToConsiderDDC=0
-HttpChunkInstallDataVersion=
-IncludeAppLocalPrerequisites=False
-bDeterministicShaderCodeOrder=False
-ApplocalPrerequisitesDirectory=(Path="")
-LocalizationTargetCatchAllChunkId=0
-bCookAll=False
-bCookMapsOnly=False
+StagingDirectory=(Path="C:/UnrealEngineProject/ActionGame02/Build/Windows")
 
